# Sysinternals-MCP

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml  build.rs
server/src/: main.rs
tools/dbgtest/: Cargo.toml
tools/dbgtest/src/: main.rs
tools/dbgview/: Cargo.toml
tools/dbgview/src/: capture.rs  error.rs  filter.rs  lib.rs  process.rs  ring_buffer.rs  session.rs
tools/dbgview/tests/: filter_tests.rs  integration_tests.rs  process_tests.rs  ring_buffer_tests.rs  session_tests.rs
tools/test_debug_app/: Cargo.toml
tools/test_debug_app/src/: main.rs
