[package]
name = "dbgtest"
version = "0.1.0"
edition = "2021"
description = "Test application that generates Windows debug output for MCP server testing"

[[bin]]
name = "dbgtest"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
chrono = "0.4"
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
] }
